--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,15 +23,24 @@
 
         <div class="form-group">
           <label for="password">Contraseña</label>
-          <input
-            type="password"
-            id="password"
-            name="password"
-            [(ngModel)]="password"
-            required
-            class="form-input"
-            placeholder="Ingrese su contraseña"
-          >
+          <div class="password-input-group">
+            <input
+              [type]="showPassword ? 'text' : 'password'"
+              id="password"
+              name="password"
+              [(ngModel)]="password"
+              required
+              class="form-input"
+              placeholder="Ingrese su contraseña"
+            >
+            <button
+              type="button"
+              class="toggle-password"
+              (click)="togglePasswordVisibility()"
+            >
+              {{ showPassword ? '👁️' : '👁️‍🗨️' }}
+            </button>
+          </div>
         </div>
 
         <div class="error-message" *ngIf="errorMessage">
@@ -41,11 +50,15 @@
         <button
           type="submit"
           class="submit-button"
-          [disabled]="!loginForm.form.valid"
+          [disabled]="isLoading || !username || !password"
         >
-          Ingresar
+          {{ isLoading ? 'Cargando...' : 'Ingresar' }}
         </button>
       </form>
+
+      <div class="register-link">
+        <p>¿No tienes cuenta? <a routerLink="/register">Crear cuenta con token</a></p>
+      </div>
     </div>
   </div>
 </div>
