--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -66,7 +66,7 @@
     </div>
 
     <div class="footer-info">
-      <p>Sistema diseñado para instituciones educativas comprometidas con el éxito estudiantil</p>
+      <p>Sistema diseñado para el Instituto Tecnologico Superior de Escárcega</p>
     </div>
   </div>
 </div>
