--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -23,7 +23,7 @@
           </svg>
         </div>
         <h3>Gestión de Asistencias</h3>
-        <p>Registro y seguimiento automatizado de la asistencia estudiantil</p>
+        <p>Seguimiento de la asistencia estudiantil</p>
       </div>
 
       <div class="feature-card">
