--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -63,7 +63,7 @@
       </div>
     </div>
     <div class="footer-info">
-      <p>Sistema diseñado para el Instituto Tecnologico Superior de Escárcega</p>
+      <p>Sistema diseñado para el <a href="https://escarcega.tecnm.mx" target="_blank">Instituto Tecnologico Superior de Escárcega</a></p>
     </div>
   </div>
 </div>
