--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -11,8 +11,10 @@
       <p class="subtitle">Sistema de Seguimiento Estudiantil</p>
     </div>
     <div class="cta-section">
-      <button class="btn-primary" (click)="goToLogin()">Iniciar Sesión</button>
-      <button class="btn-secondary" (click)="goToRegister()">Registrarse</button>
+
+      <button class="btn-primary" type="button" (click)="goToLogin()">Iniciar Sesión</button>
+<button class="btn-secondary" type="button" (click)="goToRegister()">Registrarse</button>
+
     </div>
     <div class="features">
       <div class="feature-card">
