--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -67,6 +67,6 @@
   </div>
 
   <footer class="footer">
-    <p>Sistema de Trayectorias Académicas - Instituto Tecnológico Superior</p>
+    <p>Sistema de Trayectorias Académicas - <a href="https://escarcega.tecnm.mx" target="_blank">Instituto Tecnológico Superior de Escárcega</a></p>
   </footer>
 </div>
