--- a/src/app/alerta-temprana/seguimiento-registro/seguimiento-registro.component.html
+++ b/src/app/alerta-temprana/seguimiento-registro/seguimiento-registro.component.html
@@ -58,7 +58,7 @@
             <div class="curso-header">
               <div class="curso-info">
                 <h3 class="curso-nombre">{{ curso.cursoNombre }}</h3>
-                <p class="curso-details">{{ curso.grupo }} - {{ curso.docente }}</p>
+                <p class="curso-details">{{ curso.grupoNombre }} - {{ curso.claveAsignatura }} - {{ curso.docente }}</p>
               </div>
               <div class="curso-stats">
                 <div class="stat-item total">
