--- a/src/app/alerta-temprana/gestion-asistencias/gestion-asistencias.component.html
+++ b/src/app/alerta-temprana/gestion-asistencias/gestion-asistencias.component.html
@@ -39,6 +39,7 @@
           <div class="table-header">
             <div class="header-cell">Curso</div>
             <div class="header-cell">Grupo</div>
+            <div class="header-cell">Clave</div>
             <div class="header-cell">Docente</div>
             <div class="header-cell">Estado</div>
           </div>
@@ -50,6 +51,7 @@
             >
               <div class="table-cell">{{ curso.nombre }}</div>
               <div class="table-cell">{{ curso.grupo }}</div>
+              <div class="table-cell">{{ curso.clave }}</div>
               <div class="table-cell">{{ curso.docente }}</div>
               <div class="table-cell">
                 <span
