--- a/src/app/alerta-temprana/seguimiento-registro/seguimiento-registro.component.html
+++ b/src/app/alerta-temprana/seguimiento-registro/seguimiento-registro.component.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="stat-item pendiente">
                   <span class="stat-count">{{ getEstadoCount(curso.sesiones, 'pendiente') }}</span>
-                  <span class="stat-label">Asistencias Pendientes</span>
+                  <span class="stat-label">Pendientes</span>
                 </div>
               </div>
             </div>
